fix disclaimer scroll bar issue on mobile

--- a/src/components/Exchange/Disclaimer.css
+++ b/src/components/Exchange/Disclaimer.css
@@ -15,6 +15,6 @@
 
 @media (max-width: 700px) {
   .Disclaimer .Modal-content {
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
   }
 }
